syntax = "proto3";

option csharp_namespace = "OrderingService.Protos";

import "Protos/Models.proto";

service PaymentController{
	rpc CheckValidPayment(PaymentDetails) returns (Status);
}